force-app/main/default/objects/Trigger_Handler__c/Trigger_Handler__c.object-meta.xml
<CustomObject>
    <description>Stores which classes to run in response to DML performed on an object.</description>
    <label>Trigger Handler</label>
    <nameField>
        <label>Trigger Handler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>