force-app/main/default/objects/Trigger_Handler__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that this module is active</description>
    <inlineHelpText>Indicates that this module is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>