force-app/main/default/objects/Trigger_Handler__c/fields/Asynchronous__c.field-meta.xml
<CustomField>
    <fullName>Asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this module should be run asynchronously in this transaction, for any of its After events.</description>
    <inlineHelpText>Indicates that this module should be run asynchronously in this transaction</inlineHelpText>
    <label>Asynchronous After Events</label>
    <type>Checkbox</type>
</CustomField>