force-app/main/default/objects/Trigger_Handler__c/fields/User_Managed__c.field-meta.xml
<CustomField>
    <fullName>User_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The record is managed by the user and updates won't be pushed to it.</description>
    <inlineHelpText>Check it if you intent to manage the record yourself. Be aware that updates to the package won't update the record.</inlineHelpText>
    <label>User Managed</label>
    <type>Checkbox</type>
</CustomField>